--- a/bear/manifest.json
+++ b/bear/manifest.json
@@ -12,6 +12,9 @@
     "browser_action": {
         "default_popup": "popup.html",
         "default_title": "Bear"
+    },
+    "backround": {
+        "scripts": ["background.js"]
     }
 
 }
