--- a/bear/manifest.json
+++ b/bear/manifest.json
@@ -10,11 +10,11 @@
         }
     ],
     "browser_action": {
-        "default_popup": "popup.html",
         "default_title": "Bear"
     },
-    "backround": {
+    "background": {
         "scripts": ["background.js"]
-    }
+    },
+    "permissions":["tabs"]
 
 }
